Refactor GUI button initialization and add click validation.
Converted GUI button initialization to use constants for efficiency and readability. Introduced `ValidClickChecker` to avoid duplicate inventory actions and improve UX. Commented out Settings functionality as it is not yet implemented.